fix overflow

--- a/sass/frontpage.scss
+++ b/sass/frontpage.scss
@@ -1,7 +1,7 @@
 @use "/sass/abstracts/mixins";
 
 main {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .intro {
   display: flex;
